# LifeRaft

./: .gitignore  .travis.yml  LICENSE  LifeRaft.cabal  README.md  stack.yaml
app/: Main.hs
src/Network/: LifeRaft.hs
src/Network/LifeRaft/: Raft.hs
src/Network/LifeRaft/Internal/: Communications.hs  NetworkHelper.hs  Types.hs
src/Network/LifeRaft/Raft/Internal/: Types.hs
test/: HLint.hs
test/Network/LifeRaft/: RaftSpec.hs
test/Network/LifeRaft/Internal/: CommunicationsSpec.hs  NetworkHelperSpec.hs  TestHelpers.hs
